--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,6 +7,20 @@ a {
   color: #00B7FF;
 }
 .cakeAttr { 
-  background-color: aquamarine; 
+  background-color: rgb(195, 255, 127); 
   width: 120px; 
+  font-size: large;
+  font-style: italic;
 } 
+.cakedelete {
+  background-color: rgb(127, 187, 255);
+  width: 190px;
+}
+
+.b {
+  font-style: italic;
+  background-color: rgb(131, 27, 84);
+  text-align: center;
+ font-family: sans-serif;
+  
+ }
