--- a/views/index.pug
+++ b/views/index.pug
@@ -1,16 +1,12 @@
-extends layout
-
-block content
-  h1= title
-  p Welcome to #{title} .....Hello!!!
-  button(type="button", class="btn btn-warning", onclick="doBump()") Press Me
-  div(id = "bump") Bump the count
-  a(href="cake") Cake
-    script.
-      let count = 0;
-      let bump =1;
-      function doBump(){
-        count+=bump
-        bump=bump+1;
-        document.getElementById('bump').innerHTML= `Count ${count} with bump ${bump}`
-      }
+extends layout 
+ 
+block content 
+  if (!user) 
+    a(href="/login") Login 
+    br 
+    a(href="/register") Register 
+  if (user) 
+    p You are currently logged in as #{user.username} 
+    a(href="/cake") Take me to cakes 
+    br 
+    a(href="/logout") Logout 
