--- a/views/cakecreate.pug
+++ b/views/cakecreate.pug
@@ -1,34 +1,31 @@
-extends layout 
- 
-block content 
-  h1= title 
- 
-  form(id='CakeForm', action="/resource/cake", method="POST") 
-    div.form-group 
-        label.cakeAttr(for='flavour') Cake flavour 
-        input#flavour(type='text', name='flavour') 
-    div.form-group 
-        label.cakeAttr(for='price') Cake price 
-        input#price(type='number', name='price') 
-    div.form-group 
-        label.cakeAttr(for='shape') Cake shape 
-        input#shape(type='text', name='shape') 
-    input(type="submit") 
- 
-   script. 
-     document.forms['CakeForm'].addEventListener('submit', (event) => { 
-       event.preventDefault(); 
-       // TODO do something here to show user that form is being submitted 
-       fetch(event.target.action, { 
-         method: 'PUT', 
-        body: new URLSearchParams(new FormData(event.target)) // event.target is the form 
-       }).then((resp) => { 
-         return resp.json();  // resp.json();  or whatever the server sends 
-       }).then((body) => { 
-         alert("Update succeded") 
-         // TODO handle body 
-       }).catch((error) => { 
-        // TODO handle error 
-         alert("Update failed " + error ) 
-       }); 
-     });
+extends layout
+block content
+ h1(class='b')= title
+ form(id='CakeForm', action="/resource/cake", method="POST")
+  div.form-group
+    label.cakecreate(for='flavour') Cake flavour 
+    input#flavour(type='text', name='flavour')
+  div.form-group
+    label.cakecreate(for='price') Cake price
+    input#price(type='number', name='price')
+  div.form-group
+    label.cakecreate(for='shape') Cake shape
+    input#shape(type='text', name='shape')
+  input(type="submit")
+ script.
+  document.forms['CakeForm'].addEventListener('submit', (event) => {
+  event.preventDefault();
+  // TODO do something here to show user that form is being submitted
+  fetch(event.target.action, {
+  method: 'POST',
+  body: new URLSearchParams(new FormData(event.target)) // event.target is the form
+  }).then((resp) => {
+  return resp.json(); // or resp.text() or whatever the server sends
+  }).then((body) => {
+  alert("Save succeded")
+  // TODO handle body
+  }).catch((error) => {
+  // TODO handle error
+  alert("Save failed " + error )
+  });
+  });
